--- a/testing/views/partials/footer.ejs
+++ b/testing/views/partials/footer.ejs
@@ -5,6 +5,6 @@
 </style>
 <footer class="footer   py-3 mt-auto " style="color: #E67E22;">
     <div class="container">
-        <span class="text-muted" id="text">&copy; <b>Developed By Sahith & Affan</b></span>
+        <span class="text-muted" id="text">&copy; <b>Developed By <a href="https://www.linkedin.com/in/affan-ahmed-582aaa208/">Affan</a> & <a href="https://www.linkedin.com/in/sahith-kocherla-090274188/">Sahith</a></b></span>
     </div>
 </footer>
